--- a/money/client/package.json
+++ b/money/client/package.json
@@ -5,30 +5,25 @@
   "dependencies": {
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "css-loader": "3.4.2",
+    "html-webpack-plugin": "4.0.0-beta.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.25.3",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "style-ext-html-webpack-plugin": "^4.1.2",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "2.3.5",
+    "ts-loader": "^7.0.2",
+    "typescript": "~3.7.2",
+    "webpack": "4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "clean": "rm -rf build",
+    "dev": "webpack --mode development --watch",
+    "build": "npm run clean && webpack --mode production"
   }
 }
