--- a/money/client/package.json
+++ b/money/client/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "moment": "^2.25.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "css-loader": "3.4.2",
     "html-webpack-plugin": "4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
-    "moment": "^2.25.3",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "style-ext-html-webpack-plugin": "^4.1.2",
     "style-loader": "0.23.1",
@@ -19,11 +21,12 @@
     "ts-loader": "^7.0.2",
     "typescript": "~3.7.2",
     "webpack": "4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
     "clean": "rm -rf build",
-    "dev": "webpack --mode development --watch",
-    "build": "npm run clean && webpack --mode production"
+    "dev": "webpack --config config/dev.js",
+    "build": "npm run clean && webpack --config config/prod.js"
   }
 }
