--- a/money/client/tsconfig.json
+++ b/money/client/tsconfig.json
@@ -18,7 +18,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noErrorTruncation": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
